--- a/index.html
+++ b/index.html
@@ -62,20 +62,38 @@
             </div>
 
             <div class="section">
-                <span class="label">Camera</span>
-                <div style="display: flex; gap: 5px; margin-top: 5px;">
-                    <button id="btn-zoom-in" class="btn-control">+</button>
-                    <button id="btn-zoom-out" class="btn-control">-</button>
-                    <button id="btn-reset-cam" class="btn-control" style="flex-grow: 2;">Reset</button>
+                <span class="label">Layout</span>
+                <select id="layout-select"
+                    style="width: 100%; box-sizing: border-box; padding: 6px; margin-top: 5px; background: #222; border: 1px solid #444; color: white;">
+                    <option value="manhattan">Manhattan (Original)</option>
+                    <option value="circular">Circular</option>
+                </select>
+            </div>
+
+            <div class="section">
+                <span class="label">Node Size</span>
+                <div style="display: flex; align-items: center; margin-top: 5px;">
+                    <input type="range" id="node-size-slider" min="0.1" max="300.0" step="0.1" value="1.0"
+                        style="flex: 1; margin-right: 10px;">
+                    <span id="node-size-label" style="font-size: 13px;">1.0x</span>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <canvas id="glcanvas"></canvas>
-    <canvas id="text-canvas"></canvas>
-    <div id="search-results"></div>
-    <script type="module" src="main.js"></script>
+                    <div class="section">
+                        <span class="label">Camera</span>
+                        <div style="display: flex; gap: 5px; margin-top: 5px;">
+                            <button id="btn-zoom-in" class="btn-control">+</button>
+                            <button id="btn-zoom-out" class="btn-control">-</button>
+                            <button id="btn-reset-cam" class="btn-control" style="flex-grow: 2;">Reset</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <canvas id="glcanvas"></canvas>
+            <canvas id="text-canvas"></canvas>
+            <div id="search-results"></div>
+            <script type="module" src="main.js?v=cw2"></script>
 </body>
 
 </html>
